<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Taskwar</string>
    <string name="check_task_create_task_btn">Nouvelle tâche</string>
    <string name="check_task_title">Checker une tâche</string>
    <string name="create_account_email_lbl">Email</string>
    <string name="create_account_password_lbl">Mot de Passe</string>
    <string name="create_account_confirm_password_lbl">Confirmation Mot de Passe</string>
    <string name="create_account_create_btn">Créer un compte</string>
    <string name="create_account_title">Créer un compte</string>
    <string name="create_house_housemate_nickname_lbl">Votre pseudonyme</string>
    <string name="create_house_name_lbl">Nom de la colocation</string>
    <string name="create_house_password_lbl">Mot de passe de la colocation</string>
    <string name="create_house_password_confirmation_lbl">Confirmation Mot de passe</string>
    <string name="create_house_create_btn">Créer la colocation</string>
    <string name="create_house_title">Créer une colocation</string>
    <string name="home_create_account_btn">Créer un compte</string>
    <string name="home_connect_btn">Se connecter</string>
    <string name="house_board_title">Ma colocation</string>
    <string name="house_board_check_btn">Checker une tâche</string>
    <string name="house_board_list_title">Tâches récentes</string>
    <string name="house_board_housemates_title">Les colocataires</string>
    <string name="invite_btn">Envoyer les invitations</string>
    <string name="invite_email_hint">Entrez un email</string>
    <string name="invite_help">Vous pouvez inviter dès maintenant vos colocataires en fournissant leurs adresses email. Vous pouvez les taper à la main ou les choisir dans vos contacts</string>
    <string name="invite_title">Invitez vos colocataires</string>
    <string name="join_house_title">Rejoindre une colocation</string>
    <string name="join_house_name_lbl">Nom de la colocation</string>
    <string name="join_house_housemate_nickname_lbl">Votre pseudonyme</string>
    <string name="join_house_password_lbl">Mot de passe de la colocation</string>
    <string name="join_house_join_btn">Rejoindre la colocation</string>
    <string name="list_dialog_email_title">Sélectionnez un email</string>
    <string name="list_dialog_title">Sélectionnez une valeur</string>
    <string name="login_email_lbl">Email</string>
    <string name="login_password_lbl">Password</string>
    <string name="login_connect_btn">Se connecter</string>
    <string name="login_title">Se connecter</string>
    <string name="menu_logout">Se déconnecter</string>
    <string name="menu_refresh">Rafraichir</string>
    <string name="select_join_house_join_btn">Rejoindre une colocation</string>
    <string name="select_join_house_create_btn">Créer une colocation</string>
    <string name="exception_title">Problème de connexion</string>
    <string name="exception_description">Une erreur est survenue.</string>
    <string name="progress_creating_account">Création du compte en cours</string>
    <string name="progress_login">Authentification en cours</string>
    <string name="progress_creating_house">Création de la colocation en cours</string>
    <string name="progress_joining_house">Rejoignage de la colocation en cours</string>
    <string name="progress_checking_task">Enregistrement de la tâche</string>
    <string name="progress_sending_invitations">Envoi des invitations en cours</string>
    <string name="progress_retrieving_tasks">Récupération de la liste des tâches</string>
    <string name="progress_retrieving_done_tasks">Récupération des dernières tâches effectuées</string>
    <string name="splash_loading">Chargement en cours</string>
    <string name="alert_client_exception_title">Erreur de connexion</string>
    <string name="alert_client_exception">Problèmes de connexion, réessayez svp</string>
    <string name="alert_communication_problem_title">Erreur de communication</string>
    <string name="alert_communication_problem">Problème de communication avec le serveur, réessayez svp</string>
	<string name="alert_validation_title">Erreur de validation</string>    
    <string name="alert_validation_password">Les mots de passe ne correspondent pas</string>
    <string name="alert_wrong_credentials_title">Identifiants Erronés</string>
    <string name="alert_wrong_credentials">Les identifiants que vous avez fournis sont incorrects</string>
    <string name="toast_task_checked">La tâche a bien été enregistrée</string>
</resources>
