<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
    <TextView
		android:id="@+id/login_title"
		android:text="@string/login_title"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textAppearance="?android:attr/textAppearanceMedium" />
	<TextView
		android:id="@+id/login_email_lbl"
		android:text="@string/login_email_lbl"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textAppearance="?android:attr/textAppearanceSmall" />
	<EditText
		android:id="@+id/login_email_etxt"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:inputType="textEmailAddress">
		<requestFocus />
	</EditText>
	<TextView
		android:id="@+id/login_password_lbl"
		android:text="@string/login_password_lbl"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textAppearance="?android:attr/textAppearanceSmall" />
	<EditText
		android:id="@+id/login_password_etxt"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:inputType="textPassword" />
	<Button
		android:id="@+id/login_connect_btn"
		android:text="@string/login_connect_btn"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" />
</LinearLayout>
