<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/invite_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/invite_title" 
        android:textAppearance="?android:attr/textAppearanceMedium"/>
    <TextView 
        android:id="@+id/invite_help"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/invite_help"
        android:textAppearance="?android:attr/textAppearanceSmall"/>

    <ListView
        android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />


    <Button
        android:id="@+id/invite_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/invite_btn" />

</LinearLayout>