<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1" >

    <TextView
        android:id="@+id/house_board_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/house_board_title"
        android:layout_marginBottom="15dp"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <RelativeLayout
        android:id="@+id/house_board_housemates_title_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/house_board_title">

        <TextView
            android:id="@+id/house_board_housemates_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/house_board_housemates_title"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <ProgressBar
            android:id="@+id/house_board_housemates_progress"
            style="@android:style/Widget.ProgressBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:indeterminateOnly="true" />
    </RelativeLayout>
    
    <ListView
        android:id="@+id/house_board_housemates"
        android:layout_width="fill_parent"
        android:layout_height="265dp"
        android:layout_below="@id/house_board_housemates_title_layout" />

    <Button
        android:id="@+id/house_board_check_task_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/house_board_housemates"
        android:text="@string/house_board_check_btn" />

    <RelativeLayout
        android:id="@+id/house_board_list_title_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@android:id/list">

        <TextView
            android:id="@+id/house_board_list_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/house_board_list_title"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <ProgressBar
            android:id="@+id/house_board_done_tasks_progress"
            style="@android:style/Widget.ProgressBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:indeterminateOnly="true" />
    </RelativeLayout>

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="145dp"
        android:layout_alignParentBottom="true"
        android:text="Tâches récentes" >
    </ListView>

</RelativeLayout>